[gd_scene load_steps=2 format=3 uid="uid://sdlp0ks266g0"]

[ext_resource type="Script" path="res://scripts/password.gd" id="1_ev1fv"]

[node name="Password" type="Node2D"]
script = ExtResource("1_ev1fv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="RecommendedPasswordLabel" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -516.0
offset_top = -152.0
offset_right = 516.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "The recommended password is:  ̸̺͕͚͇̥͒́̀̌̿̔͝μ̵̛̤̜͖̰̮͙̖̟̦̂̉̍̽̈̔̄͗͋͆̇̍͠ͅὴ̶̢̛̛͇̪̙̜̙̖̠͍̼̹̦͔͖̝̇̓̐͐̈́̏͘͠͝͝͠δ̵̢̹̳͚͓̪͔̈́̈́͊̉͠͝͠έ̴͚̩̯̺͈̳͉̫͈͔̖͖͕͛̓ν̶̢̧̲̪͓͖͚̬̺̥̝̤̈́͂̌̎̋̑͝ͅ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordInstructionsLabel1" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -963.5
offset_top = 146.5
offset_right = 963.5
offset_bottom = 225.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "If for any reason you cannot use this password, create your own one."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordWeakLabel" type="Label" parent="Control"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -379.0
offset_right = 340.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "Password Strength: 1/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordLineEdit" type="LineEdit" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.5
offset_top = -280.0
offset_right = 153.5
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 42
placeholder_text = "password"
alignment = 1
max_length = 10
expand_to_text_length = true

[node name="ChangePasswordLabel" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -862.0
offset_top = -456.5
offset_right = 862.0
offset_bottom = -377.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "Choose your ships password in order to continue with the sail"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordInstructionsLabel2" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -811.0
offset_top = 238.0
offset_right = 811.0
offset_bottom = 399.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "- The password must be exactly 10 characters long
- The sum of all digits in the password must be equal to 90"
horizontal_alignment = 1

[node name="Cam" type="Camera2D" parent="."]
position = Vector2(960, 540)
